# UA_MDM_Labo2

./: .gitignore
Scripts/: Scriptprueba.py
Scripts/Prueba_enviroment/mi_proyecto/: main.py  pyproject.toml
Scripts/Prueba_enviroment/mi_proyecto/src/mi_proyecto/: graficos.py  procesamiento.py
Scripts/Prueba_enviroment/mi_proyecto/src/mi_proyecto/.ipynb_checkpoints/: data_loader-checkpoint.py
Scripts/Prueba_enviroment/mi_proyecto/tests/: test_procesamiento.py
input/: SRV_POZOS.parquet
input/petfinder-adoption-prediction/: malaysia_state_points.geojson
work/EDA/: EDA.py  EDA_Streamlit 2.py  Petfinder_EDA_Notebook.ipynb  Petfinder_EDA_Slides.html.slides.html  eda_streamlit.py  merge_srv_downtime_pozos.py
work/EDA/.jupyter_config/: migrated
work/EDA/.jupyter_data/: nbsignatures.db  notebook_secret
work/EDA/.jupyter_runtime/: jpserver-49837-open.html  jupyter_cookie_secret
work/EDA/output/: summary.txt
